samples/_failures_safe/1761074266_1f1c77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b91793d0.c: In function ‘main’:
./samples/SAFE/__tmp_b91793d0.c:142:5: error: expected declaration or statement at end of input
  142 |     if (c.data == NULL) {
      |     ^~
./samples/SAFE/__tmp_b91793d0.c:142:5: error: expected declaration or statement at end of input
